Acerto no código da Landing Page.

--- a/fontes/Landing Page/OdonTO-GO/index.html
+++ b/fontes/Landing Page/OdonTO-GO/index.html
@@ -39,7 +39,7 @@
     <a class="navbar-brand" href="#">OdonTO-GO</a>
   </div>
 
-  <!-- Collect the nav links, forms, and other content for toggling -->
+  <!-- Aqui fica a barra de botões do Menu Principal -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav navbar-right">
       <li><a href="#" class="scroll-link" data-id="home">Principal</a></li>
@@ -67,8 +67,8 @@
     -->
   </div><!-- /.navbar-collapse -->
   </nav>
-  <!-- Code for Login / Signup Popup -->
-  <!-- Modal Log in -->
+  <!-- Codigo para o Login / Popup do Assine -->
+  <!-- Modal Login -->
 	<div class="modal fade" id="login" tabindex="-1" role="dialog" aria-labelledby="myModalLabel1" aria-hidden="true">
 	  <div class="modal-dialog" style="margin-top: 150px;">
 	    <div class="modal-content">
@@ -77,7 +77,7 @@
 	        <h4 class="modal-title" id="myModalLabel1">Login do Sistema</h4>
 	      </div>
 	      <div class="modal-body" id="login_details">
-	        <span> Deseja criar uma conta ?</span> <br/> <br/>
+	        <span> Entre com a sua conta </span> <br/> <br/>
 	        *<span style="font-weight:bold;">Seu Email</span> <br/>
 	        <input type="text" placeholder="example@gmail.com" name="login_email" /><br/><br/>
 	        *<span style="font-weight:bold;" >Senha</span><br />
@@ -95,7 +95,7 @@
 	</div><!-- /.modal -->
  <!--Modal Login Ends -->
     
- <!-- Modal Sign-up Starts -->
+ <!-- Modal Assinatura do Serviço -->
 	<div class="modal fade" id="signup" tabindex="-1" role="dialog" aria-labelledby="myModalLabel2" aria-hidden="true">
 	  <div class="modal-dialog" style="margin-top: 100px;">
 	    <div class="modal-content">
@@ -121,8 +121,8 @@
 	  </div><!-- /.modal-dialog -->
 	</div><!-- /.modal -->
   <!-- Modal Sign up ends! -->
+  <!-- Finalização do Bloco de código do Login / Assinatura do Serviço -->
     
-  <!-- End code for Login / Signup Popup -->
     <div class="intro-header" id="home">
 		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 					  <!-- Indicators -->
