Inicio do Trabalho com a Prototipação.

--- a/fontes/Landing Page/OdonTO-GO/index.html
+++ b/fontes/Landing Page/OdonTO-GO/index.html
@@ -239,7 +239,7 @@ Acreditamos que não se faz INOVAÇÃO somente de maneira isolada ou individual,
         <!-- /.container -->
     </div>
     
-    <!-- /.content-section-a -->
+    <!-- /.content-secao-a -->
     <footer>
         <div class="container">
             <div class="row">
